--- a/views/cart/index.pug
+++ b/views/cart/index.pug
@@ -19,7 +19,7 @@ block content
               td.text-center= book.description
               td.text-center
                 .btn-group.btn-group-sm
-                  a.btn.btn-outline-danger(href='/cart/remove/' + book.id) Remove
+                  a.btn-action.btn.btn-outline-danger(href='/cart/remove/' + book.id) Remove
                   
       a.btn.btn-success(href='/cart/hire') Hire
                   
