--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -2,13 +2,12 @@ extend ../layouts/common
 
 block content
 
-  h3.text-center.mt-4 Create user
+  h3.text-center.mt-4 Sign up for free
   .container
-    a.btn.btn-outline-secondary(href='/users') Back
     if (errors)
       each error in errors
         .alert.alert-danger.mt-4= error
-    form.form-group.mt-4(action='', method='post', enctype='multipart/form-data')
+    form.form-group.mt-4(action='/auth/signup', method='post', enctype='multipart/form-data')
       label(for='name') Name:
       input.form-control(id='name', name='name', type='text')
       label(for='phone') Phone:
@@ -19,4 +18,4 @@ block content
       input.form-control(id='password', name='password', type='password')
       label(for='avatar') Avatar:
       input.form-control-file(id='avatar', name='avatar', type='file')
-      button.btn.btn-success.mt-4 Create
+      button.btn.btn-success.mt-4 Signup
