--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -2,9 +2,9 @@ extend ../layouts/common
 
 block content
 
-  h2.text-center.mt-4 Your books self
+  h2.text-center.mt-4 Shop of #{user.name}
   .container
-    a.mb-4.btn.btn-success(href='/books/create') Add a new book
+    a.mb-4.btn.btn-success(href='/shops/' + user.id + '/books/create') Create a new book
     table.table
       thead.thead-dark
         tr
@@ -20,15 +20,13 @@ block content
             td.text-center= book.description
             td.text-center
               .btn-group.btn-group-sm
-                a.btn.btn-primary(href='/books/add/' + book.id) Add
-                a.btn.btn-primary(href='/books/edit/' + book.id) Edit
-                a.btn.btn-primary(href='/books/delete/' + book.id) Delete
-    - var n = 1;
-    nav
-      ul.pagination.justify-content-center
-        while n <= pageQuantity
-          li.page-item
-            a.page-link(href='/books?page=' + n)= n++
+                a.btn-action.btn.btn-primary(href='/shops/' + user.id + '/books/' + book.id + '/add') Add
+    //- - var n = 1;
+    //- nav
+    //-   ul.pagination.justify-content-center
+    //-     while n <= pageQuantity
+    //-       li.page-item
+    //-         a.page-link(href='/books?page=' + n)= n++
 
 
 
