--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,12 @@
 extends layouts/common
 block content
-    h1.text-center Welcome my boy!
+    .background
+        .container
+            .row
+                h1.col-12.text-center.text-white(style='font-size: 4rem;margin-bottom: 10rem;margin-top: 5rem') Library Manager!
+            .row.my-4
+                .col-12.d-flex.justify-content-center
+                    a.col-6.btn.btn-success(href='/auth/login') Login
+            .row.my-4
+                .col-12.d-flex.justify-content-center
+                    a.col-6.btn.btn-outline-success(href='/auth/signup') Signup
