--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -13,13 +13,15 @@ html
           li.nav-item
             a.nav-link(href='/users') Users
           li.nav-item
-            a.nav-link(href='/books') Books
-          li.nav-item
             a.nav-link(href='/transactions') Transactions
+          li.nav-item
+            a.nav-link(href='/shops') Shops
           li.nav-item
             a.nav-link(href='/cart') Cart
       if user
-        a.text-white(href='/profile/' + user.id)= user.name
+        .btn-group
+          a.btn.btn-primary.text-white(href='/profile/' + user.id)= user.name
+          a.btn.btn-danger(href='/signout') Signout
         
     block content
     
