--- a/views/transactions/index.pug
+++ b/views/transactions/index.pug
@@ -2,7 +2,7 @@ extend ../layouts/common
 
 block content
 
-  h2.text-center.mt-4 Your transactions
+  h2.text-center.mt-4 Transactions
   .container
     a.btn.btn-success(href='/transactions/create') Create transaction
     ul.border.border-secondary.p-4.list-unstyled.rounded-sm.mt-4
