--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -3,19 +3,18 @@ extend ../layouts/common
 block content
 
   h2.text-center.mt-4 Your users
-  .container
-    a.mb-4.btn.btn-success(href='users/create') Add a new user
+  .container.mt-4
     table.table
       thead.thead-dark
         tr
+          th.text-center Avatar
           th.text-center Name
           th.text-center Phone
-          th.text-center Action
+          th.text-center Email
         each user in users
           tr
+            td.text-center
+              img(src=user.avatarUrl, alt="avatar", width="64")
             td.text-center= user.name
             td.text-center= user.phone
-            td.text-center
-              .btn-group.btn-group-sm
-                a.btn.btn-primary(href='users/edit/' + user.id) Edit
-                a.btn.btn-primary(href='users/delete/' + user.id) Delete
+            td.text-center= user.email
